# fastrest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fastrest/: __init__.py  authentication.py  decorators.py  exceptions.py  fields.py  filters.py  generics.py  manifest.py  mcp.py  mixins.py  negotiation.py  openapi.py  pagination.py  permissions.py  relations.py  request.py  response.py  routers.py  serializers.py  settings.py  skills.py  status.py  test.py  throttling.py  views.py  viewsets.py
src/fastrest/compat/orm/: __init__.py  base.py  beanie.py  sqlalchemy.py  sqlmodel.py  tortoise.py
tests/: adapter_contract.py  conftest.py  test_authentication.py  test_edge_cases.py  test_exceptions.py  test_fields.py  test_filters.py  test_integration.py  test_manifest.py  test_mcp.py  test_negotiation.py  test_orm_beanie.py  test_orm_sqlalchemy_types.py  test_orm_sqlmodel.py  test_orm_tortoise.py  test_pagination.py  test_permissions.py  test_routers.py  test_serializers.py  test_serve.py  test_settings.py  test_skills.py  test_throttling.py  test_viewsets.py
