[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrest"
version = "0.1.1"
description = "DRF inspired REST Framework for FastAPI"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "FastREST contributors" },
]
keywords = ["fastapi", "rest", "api", "drf", "django-rest-framework", "async", "pydantic", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "aiosqlite>=0.19",
    "uvicorn>=0.20",
]

[project.urls]
Homepage = "https://github.com/hoaxnerd/fastrest"
Documentation = "https://github.com/hoaxnerd/fastrest"
Repository = "https://github.com/hoaxnerd/fastrest"
Issues = "https://github.com/hoaxnerd/fastrest/issues"
Changelog = "https://github.com/hoaxnerd/fastrest/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/fastrest"]

[tool.hatch.build.targets.sdist]
include = ["src/fastrest", "tests", "LICENSE", "README.md", "CHANGELOG.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
